--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ExplorandoAL
+application.vendor=guilherme
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ExplorandoAL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.collective-classification-2015.2.27.jar=lib/collective-classification-2015.2.27.jar
 file.reference.weka.jar=lib/weka.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.collective-classification-2015.2.27.jar}:\
     ${file.reference.weka.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -51,7 +55,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.weka.jar=weka_javadoc
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
