--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,6 +55,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.weka.jar=docs/weka_javadoc.zip!/weka_javadoc/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
