--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.collective-classification-2015.2.27.jar=lib/collective-classification-2015.2.27.jar
 file.reference.gridsearch-1.0.6.jar=lib/gridsearch-1.0.6.jar
 file.reference.libsvm.jar=lib/libsvm.jar
+file.reference.moa.jar=lib/moa.jar
 file.reference.weka.jar=lib/weka.jar
 includes=**
 jar.compress=false
@@ -39,7 +40,8 @@ javac.classpath=\
     ${file.reference.collective-classification-2015.2.27.jar}:\
     ${file.reference.weka.jar}:\
     ${file.reference.libsvm.jar}:\
-    ${file.reference.gridsearch-1.0.6.jar}
+    ${file.reference.gridsearch-1.0.6.jar}:\
+    ${file.reference.moa.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
