-adicionado classificador RF -outras mudanças

--- a/src/properties/propriedades.properties
+++ b/src/properties/propriedades.properties
@@ -1,5 +1,5 @@
 prop.xnumclasses = 2
-prop.execucoes = 2
+prop.execucoes = 10
 prop.split.treino = 80
 
 #prop.xnumclasses = 4
@@ -43,14 +43,14 @@ prop.aprendizado =  act rand
 
 #ORDENACAO -> Mm (Maior->menor), mM (menor->Maior), none (nenhuma)
 #prop.ordenacao =  mM Mm none (Mm_lista -> RDBS - root-distance border sampling)
-prop.ordenacao =  Mm
+prop.ordenacao =  Mm mM
 
 #Metodo de selcao das amostras de fronteira
 # ordem lista RDS Clu
-prop.selecaoFronteira =  RDS lista Clu ordem
+prop.selecaoFronteira =  ordem lista RDS Clu
 
-#      supervised -->>>>>> svmcross svmgrid 
+#      supervised -->>>>>> svmcross svmgrid RF
 #   semi-supervised -->>>> CollectiveWrapper Weighting YATSI      FilteredCollectiveClassifier(erro) LLGC(erro)
 #para svmgrid, mudar versao do weka.jar  para mais antiga
-prop.classificador =  svmcross YATSI
+prop.classificador =  YATSI svmcross RF
 
